--- a/font.css
+++ b/font.css
@@ -3,8 +3,8 @@
 @font-face {font-family:cour; src:url("fonts/cour.ttf");}
 @font-face {font-family:CourierPrime-Regular; src:url("fonts/CourierPrime-Regular.ttf");}
 @font-face {font-family:dtb; src:url("fonts/dtb.ttf");}
-@font-face {font-family:ere; src:url("fonts/ere.otf");}
-@font-face {font-family:Erewhon-Bold; src:url("fonts/Erewhon-Bold.pfb.ttf");}
+@font-face {font-family:ere; src:url("fonts/ere.otf"); font-weight: normal;}
+@font-face {font-family:ere; src:url("fonts/Erewhon-Bold.pfb.ttf"); font-weight: bold;}
 @font-face {font-family:iom; src:url("fonts/iom.otf");}
 @font-face {font-family:Monolisa Font; src:url("fonts/Monolisa Font.ttf");}
 @font-face {font-family:Neue Kaine Variable; src:url("fonts/Neue Kaine Variable.ttf");}
