--- a/font.css
+++ b/font.css
@@ -22,3 +22,6 @@
 @font-face {font-family:appletc; src:url("fonts/apple_tc.ttf");}
 @font-face {font-family:diag_r; src:url("fonts/diag_r.ttf");}
 @font-face {font-family:diag_b; src:url("fonts/diag_b.ttf");}
+@font-face {font-family:chirp_r; src:url("fonts/ChirpRegular.ttf");}
+@font-face {font-family:chirp_m; src:url("fonts/ChirpMedium.ttf");}
+
