--- a/font.css
+++ b/font.css
@@ -24,4 +24,9 @@
 @font-face {font-family:diag_b; src:url("fonts/diag_b.ttf");}
 @font-face {font-family:chirp_r; src:url("fonts/ChirpRegular.ttf");}
 @font-face {font-family:chirp_m; src:url("fonts/ChirpMedium.ttf");}
+@font-face {font-family:humanbby; src:url("fonts/Human\ BBY\ Web.ttf");}
+@font-face {font-family:geist; src:url("fonts/GeistVF.ttf");}
+@font-face {font-family:fira; src:url("fonts/FiraSans-Regular.ttf");}
+@font-face {font-family:firamono; src:url("fonts/FiraMono-Regular.ttf");}
+@font-face {font-family:aptos; src:url("fonts/aptos.ttf")}
 
