--- a/font.css
+++ b/font.css
@@ -29,4 +29,9 @@
 @font-face {font-family:fira; src:url("fonts/FiraSans-Regular.ttf");}
 @font-face {font-family:firamono; src:url("fonts/FiraMono-Regular.ttf");}
 @font-face {font-family:aptos; src:url("fonts/aptos.ttf")}
+@font-face {font-family:bios; src:url("fonts/Px437_IBM_EGA_8x14.ttf")}
+@font-face {font-family:vulf; src:url("fonts/VulfSans-Regular.ttf")}
+@font-face {font-family:monaco; src:url("fonts/Monaco.ttf")}
+
+
 
