--- a/font.css
+++ b/font.css
@@ -32,6 +32,6 @@
 @font-face {font-family:bios; src:url("fonts/Px437_IBM_EGA_8x14.ttf")}
 @font-face {font-family:vulf; src:url("fonts/VulfSans-Regular.ttf")}
 @font-face {font-family:monaco; src:url("fonts/Monaco.ttf")}
-
-
-
+@font-face {font-family:palo; src:url("fonts/Palo-Regular.ttf")}
+@font-face {font-family:questa; src:url("fonts/Questa_Sans_Regular.otf")}
+@font-face {font-family:fsk; src:url("fonts/FSKoopmanVF.ttf")}
