--- a/font.css
+++ b/font.css
@@ -35,3 +35,4 @@
 @font-face {font-family:palo; src:url("fonts/Palo-Regular.ttf")}
 @font-face {font-family:questa; src:url("fonts/Questa_Sans_Regular.otf")}
 @font-face {font-family:fsk; src:url("fonts/FSKoopmanVF.ttf")}
+@font-face {font-family:helvnow; src:url("fonts/HelveticaNowDisplay-Regular.otf")}
