--- a/font.css
+++ b/font.css
@@ -36,3 +36,4 @@
 @font-face {font-family:questa; src:url("fonts/Questa_Sans_Regular.otf")}
 @font-face {font-family:fsk; src:url("fonts/FSKoopmanVF.ttf")}
 @font-face {font-family:helvnow; src:url("fonts/HelveticaNowDisplay-Regular.otf")}
+@font-face {font-family:segoe; src:url("fonts/Segoe\ Pro.ttf")}
