--- a/font.css
+++ b/font.css
@@ -37,3 +37,5 @@
 @font-face {font-family:fsk; src:url("fonts/FSKoopmanVF.ttf")}
 @font-face {font-family:helvnow; src:url("fonts/HelveticaNowDisplay-Regular.otf")}
 @font-face {font-family:segoe; src:url("fonts/Segoe\ Pro.ttf")}
+@font-face {font-family:gtamerica; src:url("fonts/GT\ America\ Regular.ttf")}
+@font-face {font-family:suisse; src:url("fonts/SuisseIntl-Regular.ttf")}
