--- a/font.css
+++ b/font.css
@@ -60,7 +60,7 @@
 @font-face {font-family:inter; src:url("fonts/InterVariable.woff2")}
 @font-face {font-family:inter; src:url("fonts/InterVariable.woff2")}
 @font-face {font-family:equinox; src:url("fonts/equinox.woff2")}
-@font-face {font-family:stco; src:url("fonts/stco.woff2")}
+@font-face {font-family:scto; src:url("fonts/scto.woff2")}
 
 /* open source: */
 
