--- a/font.css
+++ b/font.css
@@ -63,6 +63,7 @@
 @font-face {font-family:scto; src:url("fonts/scto.woff2")}
 @font-face {font-family:univ; src:url("fonts/UniversalSansDisplayGX.woff2")}
 @font-face {font-family:haas; src:url("fonts/haas.woff")}
+@font-face {font-family:goat; src:url("fonts/goat.woff2")}
 
 
 @font-face {
