--- a/font.css
+++ b/font.css
@@ -64,6 +64,7 @@
 @font-face {font-family:univ; src:url("fonts/UniversalSansDisplayGX.woff2")}
 @font-face {font-family:haas; src:url("fonts/haas.woff")}
 @font-face {font-family:goat; src:url("fonts/goat.woff2")}
+@font-face {font-family:david; src:url("fonts/davidoff.woff")}
 
 
 @font-face {
