--- a/font.css
+++ b/font.css
@@ -65,6 +65,8 @@
 @font-face {font-family:haas; src:url("fonts/haas.woff")}
 @font-face {font-family:goat; src:url("fonts/goat.woff2")}
 @font-face {font-family:david; src:url("fonts/davidoff.woff")}
+@font-face {font-family:mayo; font-weight: normal;src:url("fonts/MayoClinicSans-Regular.woff2")}
+@font-face {font-family:mayo; font-weight: bold;src:url("fonts/MayoClinicSans-Bold.woff2")}
 
 
 @font-face {
