--- a/font.css
+++ b/font.css
@@ -67,6 +67,9 @@
 @font-face {font-family:david; src:url("fonts/davidoff.woff")}
 @font-face {font-family:mayo; font-weight: normal;src:url("fonts/MayoClinicSans-Regular.woff2")}
 @font-face {font-family:mayo; font-weight: bold;src:url("fonts/MayoClinicSans-Bold.woff2")}
+@font-face {font-family:akkurat; font-weight: regular;src:url("fonts/Akkurat-Regular.otf")}
+@font-face {font-family:akkurat; font-weight: bold;src:url("fonts/Akkurat-Bold.otf")}
+
 
 
 @font-face {
