--- a/font.css
+++ b/font.css
@@ -69,7 +69,7 @@
 @font-face {font-family:mayo; font-weight: bold;src:url("fonts/MayoClinicSans-Bold.woff2")}
 @font-face {font-family:akkurat; font-weight: regular;src:url("fonts/Akkurat-Regular.otf")}
 @font-face {font-family:akkurat; font-weight: bold;src:url("fonts/Akkurat-Bold.otf")}
-@font-face {font-family:karla; font-weight: bold;src:url("fonts/karla.woff2")}
+@font-face {font-family:karla; src:url("fonts/karla.woff2")}
 
 
 
