--- a/font.css
+++ b/font.css
@@ -32,7 +32,7 @@
 
 /* @font-face {font-family:chirp_r; src:url("fonts/ChirpRegular.ttf");}
 @font-face {font-family:chirp_m; src:url("fonts/ChirpMedium.ttf");} */
-
+@font-face {font-family:arimo; src:url("fonts/Arimo-VariableFont_wght.ttf");}
 @font-face {font-family:humanbby; src:url("fonts/Human\ BBY\ Web.ttf");}
 @font-face {font-family:geist; src:url("fonts/GeistVF.ttf");}
 @font-face {font-family:fira; src:url("fonts/FiraSans-Regular.ttf");}
