--- a/font.css
+++ b/font.css
@@ -1,3 +1,9 @@
+:root{
+  -webkit-font-smoothing: antialiased;
+  font-synthesis: none;
+  -webkit-text-stroke-width: 0;
+}
+
 @font-face {font-family:BDLifelessGrotesk; src:url("fonts/BDLifelessGrotesk.ttf");}
 @font-face {font-family:casmono; src:url("fonts/CascadiaMono-Regular.ttf");}
 @font-face {font-family:courier; src:url("fonts/cour.ttf");}
