--- a/widgets/widgets.css
+++ b/widgets/widgets.css
@@ -1,3 +1,7 @@
+
+
+@import url(https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css);
+
 .hScroll{
     display: flex; max-width: 100%; overflow-x:scroll;
 }
