--- a/font.css
+++ b/font.css
@@ -82,6 +82,11 @@
 @font-face {font-family:akkurat; font-weight: bold;src:url("fonts/Akkurat-Bold.otf")}
 @font-face {font-family:karla; src:url("fonts/karla.woff2")}
 
+@font-face {font-family:speedee; font-weight: normal;src:url("fonts/Speedee-Regular.woff2")}
+@font-face {font-family:speedee; font-weight: bold;src:url("fonts/Speedee-Bold.woff2")}
+
+
+
 
 
 @font-face {
