--- a/font.css
+++ b/font.css
@@ -21,6 +21,8 @@
 @font-face {font-family:RM Neue;  src:url("fonts/RMNeue-Regular.otf");}
 @font-face {font-family:basier; src:url("fonts/Basier\ Square\ Regular.otf");}
 
+@font-face {font-family:uber; font-weight: normal; src:url("fonts/UberMove-Regular.woff2");}
+@font-face {font-family:uber; font-weight: bold; src:url("fonts/UberMove-Bold.woff2");}
 
 @font-face {font-family:nhg;font-weight: normal;src:url("fonts/nhr.ttf");}
 @font-face {font-family:nhg;font-weight:bold;  src:url("fonts/nhm.ttf");}
