--- a/font.css
+++ b/font.css
@@ -20,6 +20,9 @@
 
 @font-face {font-family:RM Neue;  src:url("fonts/RMNeue-Regular.otf");}
 @font-face {font-family:basier; src:url("fonts/Basier\ Square\ Regular.otf");}
+@font-face {font-family:pretendard; src:url("fonts/PretendardVariable.woff2");}
+
+
 
 @font-face { font-family: phonic; src: url('fonts/Phonic-Regular.woff2'); font-weight: normal; }
 @font-face { font-family: phonic; src: url('fonts/Phonic-Bold.woff2'); font-weight: bold; }
