--- a/font.css
+++ b/font.css
@@ -106,6 +106,7 @@
 @font-face {font-family:akkurat; font-weight: regular;src:url("fonts/Akkurat-Regular.otf")}
 @font-face {font-family:akkurat; font-weight: bold;src:url("fonts/Akkurat-Bold.otf")}
 @font-face {font-family:karla; src:url("fonts/karla.woff2")}
+@font-face {font-family:oai; src:url("fonts/OpenAISans-Regular.woff2")}
 @font-face {font-family:national; src:url("fonts/National2Web-Medium.woff2")}
 
 @font-face {font-family:speedee; font-weight: normal;src:url("fonts/Speedee-Regular.woff2")}
