--- a/font.css
+++ b/font.css
@@ -19,6 +19,8 @@
 @font-face {font-family:Neue Regrade; font-weight:bold;   src:url("fonts/Neue Regrade Bold.otf");}
 
 @font-face {font-family:RM Neue;  src:url("fonts/RMNeue-Regular.otf");}
+@font-face {font-family:'snr';  src:url("fonts/snw.woff");}
+
 @font-face {font-family:basier; src:url("fonts/Basier\ Square\ Regular.otf");}
 @font-face {font-family:pretendard; src:url("fonts/PretendardVariable.woff2");}
 
