--- a/font.css
+++ b/font.css
@@ -5,6 +5,29 @@
   -webkit-text-stroke-width: 0;
 }
 
+@font-face {
+  font-family: "Google Sans Text";
+  font-weight: bold;
+  src: url("https://db.onlinewebfonts.com/t/5a31e8d3d403b8ac139b5fc019589b00.eot");
+  src: url("https://db.onlinewebfonts.com/t/5a31e8d3d403b8ac139b5fc019589b00.eot?#iefix")format("embedded-opentype"),
+  url("https://db.onlinewebfonts.com/t/5a31e8d3d403b8ac139b5fc019589b00.woff2")format("woff2"),
+  url("https://db.onlinewebfonts.com/t/5a31e8d3d403b8ac139b5fc019589b00.woff")format("woff"),
+  url("https://db.onlinewebfonts.com/t/5a31e8d3d403b8ac139b5fc019589b00.ttf")format("truetype"),
+  url("https://db.onlinewebfonts.com/t/5a31e8d3d403b8ac139b5fc019589b00.svg#Google Sans Text")format("svg");
+}
+
+@font-face {
+  font-family: "Google Sans Text";
+  font-weight: regular;
+  src: url("https://db.onlinewebfonts.com/t/41cdafd19e156a1f74759f9c88b878ff.eot");
+  src: url("https://db.onlinewebfonts.com/t/41cdafd19e156a1f74759f9c88b878ff.eot?#iefix")format("embedded-opentype"),
+  url("https://db.onlinewebfonts.com/t/41cdafd19e156a1f74759f9c88b878ff.woff2")format("woff2"),
+  url("https://db.onlinewebfonts.com/t/41cdafd19e156a1f74759f9c88b878ff.woff")format("woff"),
+  url("https://db.onlinewebfonts.com/t/41cdafd19e156a1f74759f9c88b878ff.ttf")format("truetype"),
+  url("https://db.onlinewebfonts.com/t/41cdafd19e156a1f74759f9c88b878ff.svg#Google Sans Text Regular")format("svg");
+}
+
+
 @font-face {font-family:BDLifelessGrotesk; src:url("fonts/BDLifelessGrotesk.ttf");}
 @font-face {font-family:casmono; src:url("fonts/CascadiaMono-Regular.ttf");}
 @font-face {font-family:courier; src:url("fonts/cour.ttf");}
