--- a/font.css
+++ b/font.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap');
 
 :root{
   -webkit-font-smoothing: antialiased;
@@ -134,7 +135,6 @@
 @font-face {font-family:mayo; font-weight: bold;src:url("fonts/MayoClinicSans-Bold.woff2")}
 @font-face {font-family:akkurat; font-weight: regular;src:url("fonts/Akkurat-Regular.otf")}
 @font-face {font-family:akkurat; font-weight: bold;src:url("fonts/Akkurat-Bold.otf")}
-@font-face {font-family:karla; src:url("fonts/karla.woff2")}
 @font-face {font-family:oai; src:url("fonts/OpenAISans-Regular.woff2")}
 @font-face {font-family:national; src:url("fonts/National2Web-Medium.woff2")}
 
