--- a/font.css
+++ b/font.css
@@ -137,6 +137,7 @@
 @font-face {font-family:akkurat; font-weight: bold;src:url("fonts/Akkurat-Bold.otf")}
 @font-face {font-family:oai; src:url("fonts/OpenAISans-Regular.woff2")}
 @font-face {font-family:national; src:url("fonts/National2Web-Medium.woff2")}
+@font-face {font-family:md; src:url("fonts/mds-var.ttf")}
 
 @font-face {font-family:speedee; font-weight: normal;src:url("fonts/Speedee-Regular.woff2")}
 @font-face {font-family:speedee; font-weight: bold;src:url("fonts/Speedee-Bold.woff2")}
